--- a/myproject/myapp/templates/myapp/equipment_list.html
+++ b/myproject/myapp/templates/myapp/equipment_list.html
@@ -1,7 +1,7 @@
 {% extends 'myapp/base.html' %}
 {% block title %}Equipment List{% endblock %}
 {% block content %}
-    <h1 class="text-3xl font-bold text-gray-800 mb-6">Equipments</h1>
+    <h1 class="text-3xl font-bold text-gray-800 mb-6">Products</h1>
     <form method="get" class="mb-6 flex gap-2">
         <input type="text" name="q" placeholder="Search..." value="{{ request.GET.q }}" class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
         <button type="submit" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-[#4bd8a4] transition">Search</button>
