--- a/myproject/myapp/templates/myapp/base.html
+++ b/myproject/myapp/templates/myapp/base.html
@@ -26,6 +26,7 @@
                 <ul class="flex space-x-6">
                     <li><a href="{% url 'home' %}" class="hover:text-gray-200 transition">Home</a></li>
                     <li><a href="{% url 'equipment_list' %}" class="hover:text-gray-200 transition">Product</a></li>
+                    <li><a href="{% url 'fav' %}" class="hover:text-gray-200 transition">Fav</a></li>
                 </ul>
             </nav>
         </div>
@@ -38,7 +39,7 @@
     </main>
 
     <!-- Footer (Facebook-like light gray) -->
-    <footer class="bg-blue-600 text-gray-600 py-4 mt-6">
+    <footer class="bg-blue-600 text-black-600 py-4 mt-6">
         <div class="max-w-7xl mx-auto px-4 text-center">
           <p class="text-sm">&copy; 2025 Care Every Home. All rights reserved.</p>
         </div>
