--- a/myproject/myapp/templates/myapp/product_list.html
+++ b/myproject/myapp/templates/myapp/product_list.html
@@ -7,7 +7,7 @@
     <!-- Hero Banner -->
     <div class="relative w-full h-80 mb-6 rounded-lg overflow-hidden shadow-md">
         <img 
-          src="/media/products/Banner.png" 
+          src="/media/products/m2.jpeg" 
           alt="Available Products" 
           class="w-full h-full object-cover"
         />
