--- a/myproject/myapp/templates/myapp/product_list.html
+++ b/myproject/myapp/templates/myapp/product_list.html
@@ -22,7 +22,7 @@
     <!-- Search and Filter Section -->
     <section class="mb-10">
         <div class="relative text-center my-20">
-          <h1 class="text-4xl md:text-5xl font-extrabold text-[#000000] rounded-lg py-4 px-8 inline-block shadow-lg transform transition-all duration-300 hover:shadow-2xl hover:scale-105 animate-fade-in">
+          <h1 class="text-4xl md:text-5xl font-extrabold text-[#1E3A8A] rounded-lg py-4 px-8 inline-block shadow-lg transform transition-all duration-300 hover:shadow-2xl hover:scale-105 animate-fade-in">
             Available Medical Equipment
             <span class="block w-24 h-1 bg-[#009aa6] mx-auto mt-3 rounded-full"></span>
           </h1>
